refactor(yaml): address review findings on the YAML module
Drop the public constructor that built the mapper with a fresh default configuration, since it bypassed the bound configuration and had no callers. Remove @Internal from SerdeYamlConfiguration, which is part of the public mapper API through getYamlConfiguration() and cloneWithConfiguration(). Make the reserved keyword set a static constant, report only the type of the object in the encoding CodecException so a value cannot leak into logs, and tidy the encoder and TCK spec Javadoc.